TWC3167-2917 - global search alignment issue, Tender page alignment issue, start & End date pop up alignment fixes, Produc selector Pop up issue fixes, Date Picker Hover issue - UI Bug Fixes (#1330)

--- a/Intel.MyDeals/Client/src/app/advanceSearch/globalSearchResults/globalSearchResults.component.css
+++ b/Intel.MyDeals/Client/src/app/advanceSearch/globalSearchResults/globalSearchResults.component.css
@@ -82,6 +82,14 @@ mat-list-item:hover {
     justify-content: center;
     position: relative;
     width: 100%;
+    max-width: 750px;
+    margin-left: auto;
+    margin-right: auto;
+    flex-wrap: wrap;
+}
+
+.margin-btn-15 {
+    margin-bottom: 15px !important;
 }
 
 .copper-btns mat-button-toggle {
